Prepare for AWS EC2 deployment with WebSocket support - Add WebSocket upgrade handling for nginx/load balancer compatibility - Update WebSocket server to use noServer mode - Add ecosystem.config.js for PM2 process management - Add deploy.sh script for easy deployments - Update README with full AWS EC2 deployment guide - Update .env.example with NODE_ENV

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Environment Variables for PumpIt Backend
 # Copy this file to .env and fill in your values
 
-# Database (Railway auto-sets this with PostgreSQL plugin)
-DATABASE_URL=postgresql://user:pass@host:5432/dbname
+# Database
+# For AWS RDS: postgresql://pumpit:YOUR_PASSWORD@your-rds-endpoint.amazonaws.com:5432/pumpit
+DATABASE_URL=postgresql://user:pass@host:5432/pumpit
 
 # Solana Configuration
 SOLANA_RPC_URL=https://mainnet.helius-rpc.com/?api-key=YOUR_KEY
@@ -12,3 +13,4 @@ HOUSE_WALLET_ADDRESS=your_house_wallet_address
 
 # Server
 PORT=3001
+NODE_ENV=development
