feat: Add Privy authentication for wallet-based login
- Add @privy-io/node package for server-side auth
- Create src/lib/privy.ts for PrivyClient initialization
- Create src/middleware/auth.ts with requireAuth/optionalAuth middleware
- Add privy_user_id field to Profile schema
- Protect sensitive routes:
  - POST /api/game/trade
  - POST /api/game/sell-all
  - POST /api/deposit/confirm
  - POST /api/deposit/withdraw
  - POST /api/chat
- Update .env.example with PRIVY_APP_ID and PRIVY_APP_SECRET
- Wallet address extracted from Privy user's linked Solana wallet

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ ESCROW_PRIVATE_KEY=your_base58_private_key
 ESCROW_WALLET_ADDRESS=your_escrow_public_address
 HOUSE_WALLET_ADDRESS=your_house_wallet_address
 
+# Privy Authentication (get from https://dashboard.privy.io)
+PRIVY_APP_ID=your_privy_app_id
+PRIVY_APP_SECRET=your_privy_app_secret
+
 # Server
 PORT=3001
 NODE_ENV=development
